--- a/webapp/src/main/resources/static/css/main.css
+++ b/webapp/src/main/resources/static/css/main.css
@@ -220,6 +220,10 @@ body {
     margin: 0 auto;
 }
 
+input {
+    font-size: 1.2rem;
+}
+
 @media(max-width: 1100px) {
     .answer-row {
         width: 80%;
